[ci skip] 4071314788?check_suite_focus=true https://github.com/tkoyama010/pysph-doc-translations/runs/4071314788?check_suite_focus=true

--- a/locale/ja/LC_MESSAGES/contribution.po
+++ b/locale/ja/LC_MESSAGES/contribution.po
@@ -31,7 +31,7 @@ msgstr "ローカルにドキュメントを作成する方法"
 
 #: ../../pysph/docs/source/contribution/how_to_write_docs.rst:9
 msgid "To build the docs, clone the repository::"
-msgstr ""
+msgstr "ドキュメントを作成するには、リポジトリをクローンします。"
 
 #: ../../pysph/docs/source/contribution/how_to_write_docs.rst:13
 msgid ""
