--- a/locale/ja/LC_MESSAGES/overview.po
+++ b/locale/ja/LC_MESSAGES/overview.po
@@ -3,6 +3,9 @@
 # This file is distributed under the same license as the PySPH package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Tetsuo Koyama <tkoyama010@gmail.com>, 2021
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-11-01 15:35+0000\n"
 "PO-Revision-Date: 2021-11-01 15:22+0000\n"
+"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2021\n"
 "Language-Team: Japanese (https://www.transifex.com/getfem-doc/teams/127008/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,6 +31,8 @@ msgid ""
 "simulations.  It is implemented in Python_ and the performance critical "
 "parts are implemented in Cython_ and PyOpenCL_."
 msgstr ""
+"PySPHはSmoothed Particle Hydrodynamics(SPH)シミュレーションのためのオープンソースフレームワークです。 "
+"Python_ で実装されており、性能が重要な部分は Cython_ と PyOpenCL_ で実装されています。"
 
 #: ../../pysph/docs/source/overview.rst:10
 msgid ""
