--- a/locale/ja/LC_MESSAGES/tutorial.po
+++ b/locale/ja/LC_MESSAGES/tutorial.po
@@ -3,6 +3,9 @@
 # This file is distributed under the same license as the PySPH package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Tetsuo Koyama <tkoyama010@gmail.com>, 2021
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-11-01 15:35+0000\n"
 "PO-Revision-Date: 2021-11-01 15:22+0000\n"
+"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2021\n"
 "Language-Team: Japanese (https://www.transifex.com/getfem-doc/teams/127008/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -249,7 +253,7 @@ msgstr ""
 
 #: ../../pysph/docs/source/tutorial/circular_patch_simple.rst:5
 msgid "Learning the ropes"
-msgstr ""
+msgstr "ロープを学ぶ"
 
 #: ../../pysph/docs/source/tutorial/circular_patch_simple.rst:7
 msgid ""
@@ -260,6 +264,10 @@ msgid ""
 "however, we highly recommend that you go through this document and the next "
 "tutorial (:doc:`circular_patch`)."
 msgstr ""
+"チュートリアルでは、用意された例題に沿って、PySPHフレームワークを紹介します。もしあなたがカジュアルユーザーで、フレームワークを *そのまま* "
+"使いたいのであれば、これを読んでください。もし、PySPHに新しい機能を追加したいのであれば、 :ref:`design_overview` "
+"を読んでください。しかし、PySPHを初めて使う方は、このドキュメントと次のチュートリアル( :doc:`circular_patch` "
+")を一通り読むことを強くお勧めします。"
 
 #: ../../pysph/docs/source/tutorial/circular_patch_simple.rst:14
 msgid ""
@@ -268,6 +276,8 @@ msgid ""
 "up problems while leaving the internal details to the framework. *All* "
 "examples follow the following steps:"
 msgstr ""
+"PySPHはPythonでSPHのような並列シミュレーションを行うためのフレームワークであることを思い出してください。そのため、問題を設定するためのユーザーフレンドリーなメカニズムを提供する一方で、内部の詳細はフレームワークに任せるという考え方をしています。"
+" *全て* の例題は以下の手順で行われます。"
 
 #: ../../pysph/docs/source/tutorial/circular_patch_simple.rst:22
 msgid ""
