--- a/locale/ja/LC_MESSAGES/starcluster.po
+++ b/locale/ja/LC_MESSAGES/starcluster.po
@@ -3,6 +3,9 @@
 # This file is distributed under the same license as the PySPH package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Tetsuo Koyama <tkoyama010@gmail.com>, 2022
+# 
 #, fuzzy
 msgid ""
 msgstr ""
@@ -10,6 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-11-01 15:35+0000\n"
 "PO-Revision-Date: 2021-11-01 15:22+0000\n"
+"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2022\n"
 "Language-Team: Japanese (https://www.transifex.com/tkoyama010/teams/127008/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,7 +23,7 @@ msgstr ""
 
 #: ../../pysph/docs/source/starcluster/overview.rst:5
 msgid "Using StarCluster with PySPH"
-msgstr ""
+msgstr "PySPHでStarClusterを使用する"
 
 #: ../../pysph/docs/source/starcluster/overview.rst:7
 msgid ""
@@ -28,6 +32,8 @@ msgid ""
 "of building, configuring, and managing clusters of virtual machines on "
 "Amazon’s EC2 cloud."
 msgstr ""
+"StarClusterは、AmazonのElastic Compute "
+"Cloud（EC2）用のオープンソース・クラスターコンピューティング・ツールキットです。StarClusterは、AmazonのEC2クラウド上で仮想マシンのクラスタを構築、設定、管理するプロセスを簡素化するために設計されています。"
 
 #: ../../pysph/docs/source/starcluster/overview.rst:12
 msgid ""
